Fix UI clipping and preset overflow issue

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -20,7 +20,7 @@
 .modal-container {
   width: 80%;
   height: 80%;
-  max-height: 80%;
+  max-height: 350px;
   margin: 0 auto;
   padding: 12px;
   background-color: $section-color;
